[ADD] 유저 전체 삭제 기능 구현

--- a/src/main/resources/templates/Result.html
+++ b/src/main/resources/templates/Result.html
@@ -13,6 +13,7 @@
       <th>Id</th>
       <th>Name</th>
       <th>Password</th>
+      <th>update</th>
       <th>delete</th>
     </tr>
     <tr th:each="users : ${users}">
@@ -25,6 +26,6 @@
   <hr/>
 </div>
 <a href="/"><button>새로 만들기</button></a>
-
+<a href="/deleteAll"><button>전체 삭제</button></a>
 </body>
 </html>
